# mdbook-drawio

./: Cargo.toml  README.md
resources/: testdiagram.drawio
src/: drawio_cache.rs  lib.rs  main.rs  utilities.rs
