[package]
name = "mdbook-drawio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.15", features=["cargo"]}
env_logger = "0.9.0"
fs_extra = "1.2.0"
mdbook = "0.4.21"
regex = "1.6.0"
tempfile = "3.3.0"
walkdir = "2.3.2"
