[package]
name = "mdbook-drawio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.15", features=["cargo"]}
env_logger = "0.9.0"
fs_extra = "1.2.0"
log = "0.4.17"
mdbook = "0.4.21"
path-clean = "0.1.0"
regex = "1.6.0"
relative-path = "1.7.2"
serde_json = "1.0.82"
tempfile = "3.3.0"
walkdir = "2.3.2"
